--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,11 @@
             user-select: none;
           }
 
+          .bg-dark {
+            background-color: #F8F8F8;
+            height: 100px
+          }
+
           @media (min-width: 768px) {
             .bd-placeholder-img-lg {
               font-size: 3.5rem;
@@ -45,9 +50,8 @@
         {% endblock styles %}
         </style>
     </head>
+    {% include 'navbar.html' %}
     <body>
-        {% include 'navbar.html' %}
-
         {% block jumbotron %}
         {% endblock jumbotron %}
 
