--- a/templates/products/single.html
+++ b/templates/products/single.html
@@ -10,4 +10,19 @@
 
 {% block content %}
     <h2>{{ product }}</h2>
+    {% for prod_image in prod_images %}
+        {% if prod_image.featured %}
+            <div class="col-xs-12 col-md-6">
+            <h3>Featured</h3>
+            <img class="img-responsive" src="{{ prod_image.image.url }}" width="700" height="500"/>
+            </div>
+        {% else %}
+            <p>Show all other images not featured</p>
+            <div class="col-xs-6 col-md-3">
+                <a href="#" class="thumbnail">
+                    <img class="img-responsive" src="{{ prod_image.image.url }}"/>
+                </a>
+            </div>
+        {% endif %}
+    {% endfor %}
 {% endblock content %}
