--- a/templates/base.html
+++ b/templates/base.html
@@ -38,12 +38,12 @@
 
           .bg-dark {
             height: 100px;
-            background-color: #25569F !important;
+            background-color: #D5D8DA !important;
           }
 
           .form-inline .btn {
-            background-color: #146EF6 !important;
-            border-color: #146EF6 !important;
+            background-color: #A1A3A4 !important;
+            border-color: #A1A3A4 !important;
           }
 
           @media (min-width: 768px) {
