--- a/templates/products/single.html
+++ b/templates/products/single.html
@@ -6,23 +6,52 @@
 <!--    .starter-template {-->
 <!--        color: #962006;-->
 <!--        }-->
+    .img-responsive {
+        border:1px solid #D5D8DA;
+    }
+    .rounded {
+        border:1px solid #D5D8DA;
+        padding: 8px;
+    }
+    .pull-right {
+        position: absolute;
+        right: 0px;
+    }
 {% endblock styles %}
 
+
 {% block content %}
-    <h2>{{ product }}</h2>
-    {% for prod_image in prod_images %}
-        {% if prod_image.featured %}
-            <div class="col-xs-12 col-md-6">
-            <h3>Featured</h3>
-            <img class="img-responsive" src="{{ prod_image.image.url }}" width="700" height="500"/>
+    <div class="row">
+        <div class="col-sm-4">
+            {% for prod_image in prod_images %}
+                {% if prod_image.featured %}
+                    <div class="col-xs-12">
+<!--                    <h3>Featured</h3>-->
+                    <img class="rounded" src="{{ prod_image.image.url }}" width="300" height="420"/>
+                    <hr/>
+                    </div>
+                {% endif %}
+            {% endfor %}
+            {% for prod_image in prod_images %}
+                {% if not prod_image.featured %}
+<!--                    <p>Show all other images not featured</p>-->
+                    <div class="col-xs-3 col-md-3">
+                        <a href="#" class="thumbnail">
+                            <img class="img-responsive" src="{{ prod_image.image.url }}" width="120" height="140"/>
+                        </a>
+                    </div>
+                {% endif %}
+            {% endfor %}
+        </div>
+        <div class="col-sm-8">
+            <div class="pb-2 mt-4 mb-2 border-bottom">
+                <h1>{{ product.title }}<a class="pull-right" href="#">Add to Cart</a></h1>
+                <hr/>
+                    Price: &euro;{{ product.price }}
+                <br/>
+                    Shipping: Free with purchase of over &euro;25
             </div>
-        {% else %}
-            <p>Show all other images not featured</p>
-            <div class="col-xs-6 col-md-3">
-                <a href="#" class="thumbnail">
-                    <img class="img-responsive" src="{{ prod_image.image.url }}"/>
-                </a>
-            </div>
-        {% endif %}
-    {% endfor %}
+            {{ product.description|linebreaks }}
+        </div>
+    </div>
 {% endblock content %}
