--- a/templates/carts/view.html
+++ b/templates/carts/view.html
@@ -6,14 +6,16 @@
         <thead>
             <th>Item</th>
             <th>Price</th>
+            <th></th>
         </thead>
         {% for item in cart.products.all %}
-        <tr><td>{{ item }}</td><td>{{ item.price }}</td></tr>
+        <tr><td>{{ item }}</td><td>{{ item.price }}</td><td><a href="{% url 'update_cart' item.slug %}">Remove</a></td></tr>
         {% endfor %}
         <tfoot>
             <tr>
                 <td></td>
                 <td>Total: {{ cart.total }}</td>
+                <td></td>
             </tr>
         </tfoot>
     </table>
