--- a/templates/products/home.html
+++ b/templates/products/home.html
@@ -7,6 +7,9 @@
     .starter-template {
         color: #251F1F;
         }
+    .jumbotron {
+        background-color: #D5D8DA;
+        }
     .jumbotron .btn-secondary {
         background-color: #A1A3A4;
         border-color: #A1A3A4;
