--- a/templates/carts/view.html
+++ b/templates/carts/view.html
@@ -2,22 +2,33 @@
 
 {% block content %}
 <div class="col-sm-8 col-sm-offset-2">
-    <table class="table">
-        <thead>
-            <th>Item</th>
-            <th>Price</th>
-            <th></th>
-        </thead>
-        {% for item in cart.products.all %}
-        <tr><td>{{ item }}</td><td>{{ item.price }}</td><td><a href="{% url 'update_cart' item.slug %}">Remove</a></td></tr>
-        {% endfor %}
-        <tfoot>
+    {% if empty %}
+        <h1 style="text-align:center;">{{ empty_message }}</h1>
+    {% else %}
+        <table class="table">
+            <thead>
+                <th>Item</th>
+                <th>Price</th>
+                <th>Qty</th>
+                <th></th>
+            </thead>
+            {% for item in cart.cartitem_set.all %}
             <tr>
-                <td></td>
-                <td>Total: {{ cart.total }}</td>
-                <td></td>
+                <td>{{ item.product }}</td>
+                <td>{{ item.product.price }}</td>
+                <td>{{ item.quantity }}</td>
+                <td><a href="{% url 'update_cart' item.product.slug %}">Remove</a></td>
             </tr>
-        </tfoot>
-    </table>
-{% endblock content%}
+            {% endfor %}
+            <tfoot>
+                <tr>
+                    <td></td>
+                    <td>Total: {{ cart.total }}</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tfoot>
+        </table>
+    {% endif %}
 </div>
+{% endblock content%}
