--- a/templates/base.html
+++ b/templates/base.html
@@ -77,6 +77,19 @@
             position: absolute;
             right: 330px;
           }
+
+          .no-padding {
+            padding: 0 !important;
+            margin: 0 !important;
+          }
+
+          .default-btn {
+            background-color: #D5D8DA;
+            color: #F8F8FF;
+            border-radius: 5px;
+            padding-bottom: 3px;
+            margin-bottom: 6px;
+          }
         </style>
         <!-- Custom styles for this template -->
         <link href="https://getbootstrap.com/docs/4.4/examples/starter-template/starter-template.css" rel="stylesheet">
