--- a/templates/carts/view.html
+++ b/templates/carts/view.html
@@ -10,14 +10,24 @@
                 <th>Item</th>
                 <th>Price</th>
                 <th>Qty</th>
+<!--                <th>Price</th>-->
                 <th></th>
             </thead>
             {% for item in cart.cartitem_set.all %}
             <tr>
-                <td>{{ item.product }}</td>
+                <td>
+                    {{ item.product }}
+                    {% if item.variations.all %}
+                    <ul>
+                        {% for var in item.variations.all %}
+                        <li>{{ var.category|capfirst }}: {{ var.title|capfirst }}</li>
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
+                </td>
                 <td>{{ item.product.price }}</td>
                 <td>{{ item.quantity }}</td>
-                <td><a href="{% url 'update_cart' item.product.slug %}">Remove</a></td>
+                <td><a href="{% url 'update_cart' item.product.slug %}?qty=0 ">Remove</a></td>
             </tr>
             {% endfor %}
             <tfoot>
