--- a/templates/carts/view.html
+++ b/templates/carts/view.html
@@ -27,7 +27,7 @@
                 </td>
                 <td>{{ item.product.price }}</td>
                 <td>{{ item.quantity }}</td>
-                <td><a href="{% url 'update_cart' item.product.slug %}?qty=0 ">Remove</a></td>
+                <td><a href="{% url 'remove_from_cart' item.id %} ">Remove</a></td>
             </tr>
             {% endfor %}
             <tfoot>
