--- a/templates/carts/view.html
+++ b/templates/carts/view.html
@@ -39,6 +39,8 @@
                 </tr>
             </tfoot>
         </table>
+        <br />
+        <a href="{% url 'checkout' %}">Checkout</a>
     {% endif %}
 </div>
 {% endblock content%}
